fix responsive overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -35,6 +35,7 @@ img{
     flex-direction: column;
     width: 230px;
     height: 100%;
+    overflow: hidden;
 
     @media (max-width: 600px){
         width: 50px;
@@ -116,7 +117,7 @@ img{
         align-items: center;
         gap: 1rem;
         padding-bottom: 1rem;
-        
+
         .add_box{
             width: 39px;
             height: 39px;
@@ -130,6 +131,13 @@ img{
     .name_playlist{
         padding: 0.5rem 0;
     }
+
+   
+    /* responsive */
+    @media (max-height: 650px){
+        overflow-y: auto;
+    }
+    
 }
 
 /* main content */
